changed form method to GET

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -87,7 +87,7 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <form id="search-form" class="navbar-form navbar-left" method="post" action="results.html">
+          <form id="search-form" class="navbar-form navbar-left" method="get" action="results.html">
             <input id="form-text" name="search-query" class="form-control" onkeypress="detectEnterKey(event)" type="text" size="25" placeholder="Search for more restaurants!">
             <button onclick="submitSearchForm()" id="submit-button" type="button" class="search-button btn"><span class="glyphicon glyphicon-search"></span> Search</button>
           </form>
