--- a/restaurant/details.html
+++ b/restaurant/details.html
@@ -118,7 +118,7 @@
             <button onclick="submitSearchForm()" id="submit-button" type="button" class="search-button btn"><span class="glyphicon glyphicon-search"></span> Search</button>
           </form>
           <li>
-            <a class="nav-button" href="https://github.com/danielbrod01">
+            <a class="nav-button" href="https://github.com/danielbrod01/danielbrod01.github.io">
             <span class="glyphicon glyphicon-user"></span> GitHub</a>
           </li>
         </ul>
