--- a/restaurant/details.html
+++ b/restaurant/details.html
@@ -118,7 +118,7 @@
             <button onclick="submitSearchForm()" id="submit-button" type="button" class="search-button btn"><span class="glyphicon glyphicon-search"></span> Search</button>
           </form>
           <li>
-            <a class="nav-button" href="https://github.com/danielbrod01/danielbrod01.github.io">
+            <a class="nav-button" href="https://github.com/danielbrod01">
             <span class="glyphicon glyphicon-user"></span> GitHub</a>
           </li>
         </ul>
@@ -148,7 +148,7 @@
           <div id="business-details""></div>
         </div>
       <hr class="result-divider">
-                                
+
   <!-- **************************** Footer ****************************** -->
   <footer class="footer nav-footer-bg-colors pt-2 pd-2">
     <div class="container text-center">
